# proc-macro-expandinator

./: .gitignore  .parcelrc  Cargo.toml  README.md  index.html  index.md  package-lock.json  package.json  targets.txt  tsconfig.json
.github/workflows/: ci.yml  deploy-canon.yml
build-for-web/: Cargo.toml
build-for-web/src/: main.rs  rewrite.rs
expandinator-ui/: index.css  index.ts
