[package]
name = "build-for-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
crates-index = "0.18.7"
flate2 = "1.0.22"
lazy_static = "1.4.0"
prettyplease = "0.1.9"
proc-macro2 = "1.0.37"
quote = "1.0.17"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["blocking"] }
semver = "1.0.7"
serde_json = "1.0.79"
syn = { version = "1.0.91", features = ["full"] }
tar = "0.4.38"
tempfile = "3.3.0"
